[tool.poetry]
name = "snakeskin"
version = "0.1.0"
description = ""
authors = ["vitroid <vitroid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
numpy = "^2.2.1"
matplotlib = "^3.10.0"
icecream = "^2.1.3"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
